# veilgremlin

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  README.md  deny.toml
.control-tower/reports/: T03-verify.txt  T04-verify.txt  T05-verify.txt  T05b-verify.txt  T06-verify.txt  T07-verify.txt  T08-verify.txt
.control-tower/sessions/: T01.jsonl  T02.jsonl  T03.jsonl  T04.jsonl  T05.jsonl  T05b.jsonl  T06.jsonl  T07.jsonl  T08.jsonl  T09.jsonl  T10.jsonl  T11.jsonl
.github/workflows/: ci.yml
.hekton/: agent-run-log.yaml  change-log.yaml  governance.yaml  project.yaml  review-log.yaml  risk-register.yaml  veilgremlin-dag.toml
.hekton/build-tasks/: T01.md  T02.md  T03-output.md  T03.md  T04-output.md  T04.md  T05-output.md  T05.md  T05b-output.md  T05b.md  T06-output.md  T06.md  T07-output.md  T07.md  T08-output.md  T08.md  T09-output.md  T09.md  T10-output.md  T10.md  T11.md
corpus/seeded/: README.md  manifest.json
crates/vg-adapters-claude/: Cargo.toml
crates/vg-adapters-claude/src/: hook.rs  lib.rs  pack.rs  runtime.rs  state.rs  wrapper.rs
crates/vg-audit/: Cargo.toml
crates/vg-audit/src/: lib.rs  record.rs
crates/vg-audit/tests/: sink.rs
crates/vg-bench/: Cargo.toml
crates/vg-bench/benches/: eval_corpus.rs  placeholder.rs
crates/vg-bench/src/: corpus.rs  lib.rs  render.rs  report.rs
crates/vg-cli/: Cargo.toml
crates/vg-cli/src/: main.rs
crates/vg-cli/tests/: cli.rs
crates/vg-core/: Cargo.toml
crates/vg-core/benches/: mask_pipeline.rs
crates/vg-core/src/: api.rs  audit.rs  conformance.rs  error.rs  ids.rs  keying.rs  lib.rs  traits.rs  types.rs
crates/vg-core/tests/: conformance_stubs.rs  demask.rs  keying_integration.rs  pipeline.rs  pipeline_latency_gate.rs
crates/vg-detectors/: Cargo.toml
crates/vg-detectors/benches/: detectors.rs
crates/vg-detectors/examples/: census.rs
crates/vg-detectors/src/: email.rs  entropy.rs  iban_sortcode.rs  ip.rs  lib.rs  phone.rs  util.rs
crates/vg-detectors/tests/: latency_gate.rs
crates/vg-parsers/: Cargo.toml
crates/vg-parsers/src/: csv.rs  diff.rs  env.rs  json.rs  lib.rs  log.rs  rust.rs  toml.rs  util.rs  yaml.rs
crates/vg-parsers/tests/: detector_integration.rs
crates/vg-policy/: Cargo.toml
crates/vg-policy/fixtures/: global.policy.json  invalid-class.policy.json  malformed.policy.json  malicious-hard-deny.policy.json  repo.policy.json  session.policy.json
crates/vg-policy/src/: config.rs  engine.rs  lib.rs
crates/vg-policy/tests/: policy.rs
crates/vg-vault/: Cargo.toml
crates/vg-vault/src/: codec.rs  error.rs  keychain.rs  lib.rs  random.rs  schema.rs
crates/vg-vault/tests/: vault.rs
docs/: architecture.md  blog-signals.md  decisions.md  depth-decision.md  local-assumptions.md  next-actions.md  operating-model.md  project-walkthrough.md  retire-promote-review.md  risks.md  runbook-hooks.md  session-log.md  setup.md  walkthrough-template.md
docs/architecture/: agent-factory-plan.md  interface-contracts.md  work-breakdown.md
docs/build-log/: 2026-06-30-scaffolding-a-privacy-shield.md  2026-07-04-a-real-name-to-say-out-loud.md  2026-07-14-the-workspace-that-almost-built-itself.md  2026-07-15-freezing-the-contract-everyone-else-builds-on.md  2026-07-15-the-detector-that-asked-a-question-instead-of-writing-code.md  2026-07-16-teaching-the-fan-out-to-test-itself.md  2026-07-16-the-fix-that-was-wrong-and-how-we-found-out.md  2026-07-17-a-keying-module-built-without-a-compiler-in-the-room.md  2026-07-17-an-audit-log-sized-to-fit-its-lockfile.md  2026-07-17-parsers-that-refuse-to-panic.md  2026-07-17-the-policy-format-the-sandbox-chose.md  2026-07-17-the-vault-that-had-to-remember-its-counting.md  2026-07-17-three-bugs-a-compiler-would-never-have-caught.md  2026-07-18-the-seam-that-needed-one-more-argument.md  README.md
docs/research/: deep-research-report.md
docs/spec/: requirements-and-design-spec.md
docs/walkthroughs/: 2026-07-14-t01-workspace-scaffold.md
mind-palace/20-projects/factory-output/veilgremlin/: brief.md  decisions.md  human-understanding-check.md  index.md  next-actions.md  reproducibility.md  retire-promote-review.md  session-log.md
release/: README.md
scripts/: bootstrap-project.sh  check-mirror-drift.sh  check-prereqs.sh  setup-hooks.sh  sync-mirror-to-vault.sh  verify-project.sh
