[workspace]
resolver = "2"
members = [
    "crates/vg-core",
    "crates/vg-detectors",
    "crates/vg-parsers",
    "crates/vg-vault",
    "crates/vg-policy",
    "crates/vg-audit",
    "crates/vg-cli",
    "crates/vg-adapters-claude",
    "crates/vg-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.lints.clippy]
all = "warn"
