[package]
name = "vg-adapters-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Claude Code hook adapter (UserPromptSubmit/PreToolUse/PostToolUse) + the vg run -- claude wrapper, plus the shared engine wiring (state dir, vault/policy/audit) the vg CLI reuses."

[lints]
workspace = true

[dependencies]
vg-core = { workspace = true }
# The hooks and the shared `Engine` compose the real pipeline: detectors + parsers feed
# `vg_core::Context`; the vault/policy/audit trait objects populate `vg_core::Policy`.
vg-detectors = { workspace = true }
vg-parsers = { workspace = true }
vg-vault = { workspace = true }
vg-policy = { workspace = true }
vg-audit = { workspace = true }
# Hook payloads arrive as JSON on stdin (Claude Code hook protocol) and persisted packs are
# JSON on disk. serde/serde_json are already resolved in the workspace lock (vg-policy,
# vg-audit), so this adds no new registry crate.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
