[package]
name = "vg-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Append-only, redaction-safe audit sink implementing vg-core::AuditSink."

[lints]
workspace = true

[dependencies]
vg-core = { path = "../vg-core", version = "0.1.0" }
