[package]
name = "vg-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Criterion bench harness + Go/No-Go eval report for VeilGremlin's hot path."

[lints]
workspace = true

[dependencies]
vg-core = { path = "../vg-core", version = "0.1.0" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "placeholder"
harness = false
