[package]
name = "vg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "VeilGremlin shared types and library API (scan/mask/rehydrate/benchmark)."

[lints]
workspace = true

[dependencies]
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
# Dev-only: lets keying's tests exercise real `Finding`s from `vg-detectors::all_detectors()`
# (interface-contracts.md acceptance criterion, added 2026-07-16) rather than only hand-built
# mock values. Not a real dependency cycle — vg-detectors' (non-dev) dependency on vg-core is
# the only edge in the normal build graph; this edge exists solely for vg-core's own test
# binary and Cargo resolves dev-dependency cycles like this without issue.
vg-detectors = { workspace = true }
# T07 pipeline wiring: the end-to-end `mask`/`scan` integration tests (`tests/pipeline.rs`)
# and the criterion bench compose the *real* Wave B implementations through `vg-core`'s own
# trait objects. Same dev-only, resolves-fine cycle as `vg-detectors` above — none of these is
# a normal-build dependency of `vg-core`.
vg-parsers = { workspace = true }
vg-vault = { workspace = true }
vg-policy = { workspace = true }
vg-audit = { workspace = true }
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "mask_pipeline"
harness = false
