[package]
name = "vg-detectors"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Deterministic, allocation-aware hot-path detectors implementing vg-core::Detector."

[lints]
workspace = true

[dependencies]
vg-core = { workspace = true }
