[package]
name = "vg-detectors"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Deterministic, allocation-aware hot-path detectors implementing vg-core::Detector."

[lints]
workspace = true

[dependencies]
vg-core = { workspace = true }
regex = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "detectors"
harness = false
