[package]
name = "vg-parsers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "File-aware parsers implementing vg-core::Parser (logs, diffs, JSON/YAML, .env, tree-sitter)."

[lints]
workspace = true

[dependencies]
vg-core = { path = "../vg-core", version = "0.1.0" }
